# ogentic-router

./: .commitlintrc.json  .editorconfig  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.claude/: _factory-manifest.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  ogenticai-reviewer.yml  release.yml  uat-override.yml
demo/: Dockerfile  README.md  app.py  policy.yaml  railway.json  router.yaml  router_demo.py
docs/: ARCHITECTURE.md  COMPARISON.md  POLICY_REFERENCE.md  PRIVACY_POSTURE.md  SOTTO_INTEGRATION.md
docs/adr/: 0001-router-architecture.md
examples/: audit_replay.py  openai_sdk_swap.py  policy.yaml  route_string.py  router.yaml  sotto_desktop_config.toml
src/ogentic_router/: __init__.py  classification.py  cost.py  errors.py  router.py
src/ogentic_router/adapters/: __init__.py  _allowlist.py  _anthropic_translate.py  _localhost.py  _sse.py  anthropic_adapter.py  base.py  factory.py  llamacpp_adapter.py  ollama_adapter.py  openai_adapter.py
src/ogentic_router/audit/: __init__.py  _request_id.py  base.py  sinks.py
src/ogentic_router/cli/: __init__.py  main.py
src/ogentic_router/mcp/: __init__.py  __main__.py  server.py
src/ogentic_router/policy/: __init__.py  _suggestions.py  decision.py  errors.py  models.py  policy.py
src/ogentic_router/server/: __init__.py  _normalize.py  _sse.py  app.py  config.py
tests/: test_audit_privacy.py  test_budget_ceiling.py  test_budget_default_on.py  test_deny_cloud.py  test_policy.py  test_readme_snippets.py  test_router.py  test_scaffold.py  test_version.py
tests/adapters/: test_allowlist.py  test_anthropic_adapter.py  test_base.py  test_contract.py  test_llamacpp_adapter.py  test_localhost.py  test_ollama_adapter.py  test_openai_adapter.py  test_sse.py
tests/adapters/fixtures/: llamacpp_response_missing_usage.json  ollama_response.json
tests/audit/: test_router_emit.py  test_sinks.py
tests/cli/: conftest.py  test_cli.py
tests/demo/: test_router_demo.py
tests/mcp/: test_router_server.py
tests/server/: conftest.py  test_build_adapters.py  test_chat_completions.py  test_cli_serve.py  test_config_loader.py  test_healthz.py  test_models_endpoint.py  test_policy_endpoint.py
tests/server/fixtures/: router.yaml
