[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ogentic-router"
version = "0.1.0"
description = "Privacy-aware LLM routing: sensitive content stays local; redacted content may go to cloud."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "David Oladeji", email = "david@ogentic.ai" },
]
keywords = ["llm", "routing", "privacy", "hipaa", "privilege", "mnpi", "ollama", "local-first"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # Core router runtime. Stays slim — Shield + backend adapters live in
    # optional extras so the base install doesn't pull spaCy/Presidio
    # weights for callers who only need the policy DSL or audit emit path.
    "click>=8.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    # LocalFileSink is the default non-Noop audit sink (OGE-584); its
    # cross-platform advisory lock uses filelock. Tiny (~30 KB), so it lives
    # in the base install rather than behind an extra — audit-to-local-file
    # works out of the box with no extra to remember.
    "filelock>=3.12",
]

[project.optional-dependencies]
# Shield classifier — primary upstream for sensitivity-aware routing.
# Kept as an extra so v0.1 builds can land before ogentic-shield is
# published to PyPI (local installs use ``-e ../ogentic-shield``).
shield = ["ogentic-shield>=0.2"]
# Cloud-provider adapter deps. Off by default — opt in with [cloud].
cloud = [
    "httpx>=0.27",
    "openai>=1.30",
    "anthropic>=0.30",
]
# Local-provider adapter deps. The llama.cpp and Ollama paths use plain
# HTTP, so this extra is mostly a forward-compat hook for MLX / vLLM.
local = [
    "httpx>=0.27",
]
# OpenAI-shaped server (drop-in endpoint swap).
server = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "httpx>=0.27",
]
# MCP tool surface — router.classify_route etc.
mcp = ["mcp>=1.0"]
# ogentic-audit HMAC-chained log integration (OgenticAuditSink). Empty until
# ogentic-audit publishes to PyPI — the sink lazy-imports it and raises
# AuditUnavailableError with this extra's install hint until then. LocalFileSink
# (the v0.1 default non-Noop sink) needs nothing here; its filelock dep is in
# the base install.
audit = []
# Everything.
all = ["ogentic-router[shield,cloud,local,server,mcp,audit]"]
# Development.
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/OgenticAI/ogentic-router"
Documentation = "https://github.com/OgenticAI/ogentic-router#readme"
Issues = "https://github.com/OgenticAI/ogentic-router/issues"
Source = "https://github.com/OgenticAI/ogentic-router"
Changelog = "https://github.com/OgenticAI/ogentic-router/blob/main/CHANGELOG.md"

[project.scripts]
ogentic-router = "ogentic_router.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/ogentic_router"]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # asserts in tests are fine

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: integration tests that need a live Ollama / cloud backend (slow, opt-in)",
]
